# src/integration-test/resources/openapi/openapi.yaml
@@ -7,7 +7,7 @@ info:
     url: https://opensource.org/licenses/MIT
   version: "1.2"
 servers:
-- url: http://localhost:64009
+- url: http://localhost:50028
   description: Generated server url
 tags:
 - name: Billing Data Collector
@@ -704,10 +704,10 @@ components:
             $ref: "#/components/schemas/Violation"
         title:
           type: string
-        detail:
-          type: string
         causeAsProblem:
           $ref: "#/components/schemas/ThrowableProblem"
+        detail:
+          type: string
         instance:
           type: string
           format: uri
@@ -739,13 +739,6 @@ components:
       type: object
       description: Billing source event
       properties:
-        source:
-          type: string
-          description: Source system
-          enum:
-          - CONTRACT
-          - OPENE
-          example: CONTRACT
         id:
           type: string
           description: External id
@@ -758,11 +751,11 @@ components:
           type: string
           description: Event type
           enum:
-          - CONTRACT_CREATED
-          - CONTRACT_UPDATED
-          - CONTRACT_DELETED
-          - CONTRACT_TERMINATED
-          example: CONTRACT_CREATED
+          - CREATED
+          - UPDATED
+          - DELETED
+          - TERMINATED
+          example: CREATED
     PageScheduledBilling:
       type: object
       properties:
@@ -772,17 +765,17 @@ components:
         totalElements:
           type: integer
           format: int64
+        pageable:
+          $ref: "#/components/schemas/PageableObject"
+        numberOfElements:
+          type: integer
+          format: int32
+        sort:
+          $ref: "#/components/schemas/SortObject"
         first:
           type: boolean
         last:
           type: boolean
-        sort:
-          $ref: "#/components/schemas/SortObject"
-        numberOfElements:
-          type: integer
-          format: int32
-        pageable:
-          $ref: "#/components/schemas/PageableObject"
         size:
           type: integer
           format: int32
@@ -798,8 +791,8 @@ components:
     PageableObject:
       type: object
       properties:
-        sort:
-          $ref: "#/components/schemas/SortObject"
+        unpaged:
+          type: boolean
         paged:
           type: boolean
         pageNumber:
@@ -808,17 +801,17 @@ components:
         pageSize:
           type: integer
           format: int32
-        unpaged:
-          type: boolean
+        sort:
+          $ref: "#/components/schemas/SortObject"
         offset:
           type: integer
           format: int64
     SortObject:
       type: object
       properties:
-        sorted:
-          type: boolean
         unsorted:
+          type: boolean
+        sorted:
           type: boolean
         empty:
           type: boolean
