# src/main/java/se/sundsvall/billingdatacollector/api/model/ContractEventType.java
@@ -1,8 +1,0 @@
-package se.sundsvall.billingdatacollector.api.model;
-
-public enum ContractEventType {
-	CONTRACT_CREATED,
-	CONTRACT_UPDATED,
-	CONTRACT_DELETED,
-	CONTRACT_TERMINATED
-}
